--- a/TMSProject/TMSProject/Classes/View/BillingAndPlanning.xaml
+++ b/TMSProject/TMSProject/Classes/View/BillingAndPlanning.xaml
@@ -1,90 +1,91 @@
-﻿<Page x:Class="TMSProject.Classes.View.BillingAndPlanning"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:TMSProject.Classes.View"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="1000"
-      Title="BillingPage">
+﻿<UserControl x:Class="TMSProject.Classes.View.BillingAndPlanning"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:TMSProject.Classes.View"
+             mc:Ignorable="d"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             d:DesignHeight="540" d:DesignWidth="1010">
+    <Grid x:Name="GridMain" Background="White">
+        <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" >
+            <Grid>
+                <TextBlock Text="Planning Infomation" FontSize="35" FontWeight="Bold" Foreground="ForestGreen" Margin="0,95,0,993"/>
 
-    <Grid x:Name="GridMain" Background="White" Margin="0,0,0,-693">
-        <TextBlock Text="Planning Infomation" FontSize="35" FontWeight="Bold" Foreground="ForestGreen" Margin="0,95,0,993"/>
+                <TextBlock Text="Billing Infomation" FontSize="35" FontWeight="Bold" Foreground="ForestGreen" Margin="10,604,10,483"/>
 
-
-
-
-
-
-        <TextBlock Text="Billing Infomation" FontSize="35" FontWeight="Bold" Foreground="ForestGreen" Margin="10,696,-10,391"/>
-
-        <TextBlock Text="Customer name:" Foreground="Black" FontSize="15" Margin="48,24,827,1082"/>
-        <TextBlock x:Name="CustomerName" Foreground="Black" Width="Auto" VerticalAlignment="Center" Height="39" Margin="140,450,574,557.141"/>
+                <TextBlock Text="Customer name:" Foreground="Black" FontSize="15" Margin="48,24,636,1082"/>
+                <TextBlock x:Name="CustomerName" Foreground="Black" Width="Auto" VerticalAlignment="Center" Height="39" Margin="140,450,574,557.141"/>
 
 
-        <TextBlock Text="Order ID:" Foreground="Black" FontSize="15"  Margin="486,24,433,1082" RenderTransformOrigin="1.021,0.121"/>
-        <TextBlock x:Name="OrderID" Foreground="Black" Width="Auto" VerticalAlignment="Center" Height="45" Margin="140,511,380,490.141"/>
+                <TextBlock Text="Order ID:" Foreground="Black" FontSize="15"  Margin="486,24,239,1082" RenderTransformOrigin="1.021,0.121"/>
+                <TextBlock x:Name="OrderID" Foreground="Black" Width="Auto" VerticalAlignment="Center" Height="45" Margin="140,511,380,490.141"/>
 
 
 
-        <TextBlock Text="Job Type:" Foreground="Black" FontSize="15"  Margin="500,769,433,239" RenderTransformOrigin="0.506,0.344"/>
-        <TextBlock x:Name="JobType" Foreground="Black" Width="Auto" VerticalAlignment="Center" Height="40" Margin="112,572,617,434.141"/>
+                <TextBlock Text="Job Type:" Foreground="Black" FontSize="20"  Margin="363,700,307,386" RenderTransformOrigin="0.506,0.344"/>
+                <TextBlock x:Name="billingJobType" Foreground="Black" Width="Auto" VerticalAlignment="Center" Height="40" Margin="486,700,192,403"/>
 
 
-        <TextBlock Text="Quality:" Foreground="Black" FontSize="15"  Margin="10,826,925,182"/>
-        <TextBlock x:Name="Quality" Foreground="Black" Width="Auto" VerticalAlignment="Center" Height="36" Margin="93,612,589,398.141"/>
+                <TextBlock Text="Quality:" Foreground="Black" FontSize="20"  Margin="10,735,688,361"/>
+                <TextBlock x:Name="billingQuality" Foreground="Black" FontSize="20" Width="Auto" VerticalAlignment="Center" Height="47" Margin="112,735,504,361"/>
 
 
-        <TextBlock Text="Van Type:" FontSize="15" Foreground="Black" Margin="10,769,903,248.141"/>
-        <TextBlock x:Name="VanType" Foreground="Black" Width="Auto" VerticalAlignment="Center" Margin="563,572,57,428.141" Height="46"/>
+                <TextBlock  Text="Van Type:" FontSize="20" Foreground="Black" Margin="10,700,660,386"/>
+                <TextBlock x:Name="billingVanType" Foreground="Black" Width="Auto" VerticalAlignment="Center" Margin="108,700,512,397" Height="46"/>
 
 
-        <Button Content="Load Data" Height="47" Margin="424,866,439,0"
-                        x:Name="Load_Billing_Btn" VerticalAlignment="Top" Click="Load_Billing_Btn_Click" RenderTransformOrigin="0.325,-4.318"/>
+                <Button Foreground="Black" Content="Load Data" Height="57" Margin="636,678,228,0"
+                                x:Name="Load_Billing_Btn" VerticalAlignment="Top" Click="Load_Billing_Btn_Click" RenderTransformOrigin="0.325,-4.318"/>
 
-        <DataGrid Name="dataGrid1" HorizontalAlignment="Left" Height="151" Margin="24,928,0,0" VerticalAlignment="Top" Width="942" Grid.RowSpan="2"/>
+                <DataGrid AutoGenerateColumns="true" HorizontalAlignment="Left" Height="152" Margin="24,820,0,0" VerticalAlignment="Top" Width="741" Background="LightGreen" Name="billingDataGrid" IsReadOnly="False" >
+                    <DataGrid.RowStyle>
+                        <Style TargetType="{x:Type DataGridRow}"/>
+                    </DataGrid.RowStyle>
+                </DataGrid>
 
-        <TextBox Name="txtStartCity" HorizontalAlignment="Left" Height="23" Margin="120,154,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="243"/>
-        <TextBlock HorizontalAlignment="Left" FontSize="15"  Margin="48,155,0,0" TextWrapping="Wrap" Text="Start City" VerticalAlignment="Top" RenderTransformOrigin="0.305,-2.738" Height="23" Width="67"/>
-        <TextBlock Text="End City" FontSize="15"  HorizontalAlignment="Left" Margin="424,157,0,0" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.305,-2.738"/>
-        <TextBox Name="txtEndCity" FontSize="15"  HorizontalAlignment="Left" Height="27" Margin="500,150,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="229"/>
-        <Button Content="Load Data" Width="111" Margin="804,135,85,0"
-                                                x:Name="LoadData" VerticalAlignment="Top"  Click="Load_Planning_Click"   RenderTransformOrigin="0.298,7.43" Height="43"/>
-        <DataGrid HorizontalAlignment="Left" Height="100" Margin="400,234,0,0" VerticalAlignment="Top" Width="100"/>
-        <DataGrid HorizontalAlignment="Left" Height="123" Margin="42,208,0,0" VerticalAlignment="Top" Width="885" RenderTransformOrigin="0.5,0.5">
-            <DataGrid AutoGenerateColumns="True" Margin="28,73,74,248" Name="resultDataGrid" IsReadOnly="False" >
-                <DataGrid.RowStyle>
-                    <Style TargetType="{x:Type DataGridRow}">
-                        <EventSetter Event="MouseDoubleClick" Handler="resultDataGrid_MouseDoubleClick"/>
-                    </Style>
-                </DataGrid.RowStyle>
-            </DataGrid>
-        </DataGrid>
-        <TextBlock FontSize="15" HorizontalAlignment="Left" Margin="66,399,0,0" TextWrapping="Wrap" Text="Start city" VerticalAlignment="Top"/>
-        <TextBlock FontSize="15" HorizontalAlignment="Left" Margin="424,397,0,0" TextWrapping="Wrap" Text="End City" VerticalAlignment="Top" RenderTransformOrigin="3.577,-1.948"/>
-        <TextBlock FontSize="15" HorizontalAlignment="Left" Margin="67,448,0,0" TextWrapping="Wrap" Text="Distance" VerticalAlignment="Top" RenderTransformOrigin="0.43,1.653"/>
-        <TextBlock FontSize="15" HorizontalAlignment="Left" Margin="351,447,0,0" TextWrapping="Wrap" Text="Time" VerticalAlignment="Top" RenderTransformOrigin="-1.991,0.387"/>
-        <TextBlock FontSize="15" HorizontalAlignment="Left" Margin="66,355,0,0" TextWrapping="Wrap" Text="Trip ID" VerticalAlignment="Top"/>
-        <TextBox Name="txtMileageID" HorizontalAlignment="Left" Height="23" Margin="140,354,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="223"/>
+                <TextBox Foreground="Black" Name="txtStartCity" HorizontalAlignment="Left" Height="23" Margin="120,154,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="243"/>
+                <TextBlock Foreground="Black" HorizontalAlignment="Left" FontSize="15"  Margin="48,155,0,0" TextWrapping="Wrap" Text="Start City" VerticalAlignment="Top" RenderTransformOrigin="0.305,-2.738" Height="23" Width="92"/>
+                <TextBlock Foreground="Black" Text="End City" FontSize="15"  HorizontalAlignment="Left" Margin="424,157,0,0" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.305,-2.738" Width="76"/>
+                <TextBox Foreground="Black" Name="txtEndCity" FontSize="15"  HorizontalAlignment="Left" Height="27" Margin="500,150,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="229"/>
+                <Button Foreground="Black" Content="Load Data" Width="111" Margin="112,61,577,0"
+                                                        x:Name="LoadData" VerticalAlignment="Top"  Click="Load_Planning_Click" RenderTransformOrigin="0.298,7.43" Height="43"/>
 
-        <TextBlock FontSize="15" HorizontalAlignment="Left" Margin="640,446,0,0" TextWrapping="Wrap" Text="Status" VerticalAlignment="Top"/>
-        <TextBox Name="txtStatus"  HorizontalAlignment="Left" Height="23" Margin="718,445,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="152"/>
+                <DataGrid AutoGenerateColumns="true" HorizontalAlignment="Left" Height="152" Margin="53,197,0,0" VerticalAlignment="Top" Width="690" Background="LightGreen" Name="tripResultDataGrid" IsReadOnly="False" >
+                    <DataGrid.RowStyle>
+                        <Style TargetType="{x:Type DataGridRow}">
+                            <EventSetter Event="MouseDoubleClick" Handler="resultDataGrid_MouseDoubleClick"/>
+                        </Style>
+                    </DataGrid.RowStyle>
+                </DataGrid>
 
-        <TextBox Name="txtDistance" HorizontalAlignment="Left" Height="23" Margin="140,443,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="152"/>
-        <TextBox Name="txtStartCityName"  HorizontalAlignment="Left" Height="29" Margin="140,390,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="243"/>
-        <TextBox Name="txtEndCityName" HorizontalAlignment="Left" Height="23" Margin="500,396,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="243"/>
-        <TextBox Name="txtWorkingTime" HorizontalAlignment="Left" Height="23" Margin="409,444,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="152"/>
-        <Button Content="Save" Height="Auto" Margin="140,537,785,574" x:Name="Save_Trip_Button"/>
-        <Button Content="Delete" Height="Auto" Margin="381,537,533,574" x:Name="Delete_Trip_Button" RenderTransformOrigin="0.708,0.187"/>
-        <Button Content="Change" Height="Auto" Margin="605,537,303,574" x:Name="Change_Trip_Button"/>
-        <TextBox Name="txtCustomerName" HorizontalAlignment="Left" Height="23" Margin="178,24,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox Name="txtOrderID" HorizontalAlignment="Left" Height="23" Margin="572,24,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+                <TextBlock Foreground="Black" FontSize="15" HorizontalAlignment="Left" Margin="66,399,0,0" TextWrapping="Wrap" Text="Start city" VerticalAlignment="Top"/>
+                <TextBlock Foreground="Black" FontSize="15" HorizontalAlignment="Left" Margin="424,397,0,0" TextWrapping="Wrap" Text="End City" VerticalAlignment="Top" RenderTransformOrigin="3.577,-1.948"/>
+                <TextBlock Foreground="Black" FontSize="15" HorizontalAlignment="Left" Margin="67,448,0,0" TextWrapping="Wrap" Text="Distance" VerticalAlignment="Top" RenderTransformOrigin="0.43,1.653"/>
+                <TextBlock Foreground="Black" FontSize="15" HorizontalAlignment="Left" Margin="351,447,0,0" TextWrapping="Wrap" Text="Time" VerticalAlignment="Top" RenderTransformOrigin="-1.991,0.387"/>
+                <TextBlock Foreground="Black" FontSize="15" HorizontalAlignment="Left" Margin="66,355,0,0" TextWrapping="Wrap" Text="Trip ID" VerticalAlignment="Top"/>
+                <TextBox Foreground="Black" Name="txtMileageID" HorizontalAlignment="Left" Height="23" Margin="140,354,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="223"/>
 
+                <TextBlock Foreground="Black" FontSize="15" HorizontalAlignment="Left" Margin="589,445,0,0" TextWrapping="Wrap" Text="Status" VerticalAlignment="Top"/>
+                <TextBox Foreground="Black" Name="txtStatus"  HorizontalAlignment="Left" Height="23" Margin="657,444,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="72"/>
 
-
+                <TextBox Foreground="Black" Name="txtDistance" HorizontalAlignment="Left" Height="23" Margin="140,443,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="152"/>
+                <TextBox Foreground="Black" Name="txtStartCityName"  HorizontalAlignment="Left" Height="29" Margin="140,390,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="243"/>
+                <TextBox Foreground="Black" Name="txtEndCityName" HorizontalAlignment="Left" Height="23" Margin="500,396,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="243"/>
+                <TextBox Foreground="Black" Name="txtWorkingTime" HorizontalAlignment="Left" Height="23" Margin="409,444,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="152"/>
+                <Button Foreground="Black" Content="Save" Height="Auto" Margin="208,521,695,622" x:Name="Save_Trip_Button" Click="Save_Trip_Button_Click" RenderTransformOrigin="-2.778,8.421"/>
+                <Button Foreground="Black" Content="Delete" Height="Auto" Margin="377,521,533,622" x:Name="Delete_Trip_Button" Click="Delete_Trip_Button_Click" RenderTransformOrigin="0.708,0.187"/>
+                <Button Foreground="Black" Content="Change" Height="Auto" Margin="540,521,363,617" x:Name="Change_Trip_Button" Click="Change_Trip_Button_Click"/>
+                <TextBox Foreground="Black" Name="txtCustomerName" HorizontalAlignment="Left" Height="23" Margin="178,24,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+                <TextBox Foreground="Black" Name="txtOrderID" HorizontalAlignment="Left" Height="23" Margin="572,24,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+                <TextBlock Foreground="Black" FontSize="20" HorizontalAlignment="Left" Margin="10,665,0,0" TextWrapping="Wrap" Text="Customer Name:" VerticalAlignment="Top" Height="30" Width="161"/>
+                <TextBlock Name="billingCustomerName" Foreground="Black" FontSize="20" HorizontalAlignment="Left" Margin="176,665,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="47" Width="115" RenderTransformOrigin="0.274,0.24"/>
+                <TextBlock Foreground="Black" FontSize="20" HorizontalAlignment="Left" Margin="363,665,0,0" TextWrapping="Wrap" Text="OrderID:" VerticalAlignment="Top" Width="97"/>
+                <TextBlock Name="billingOrderID" Foreground="Black" FontSize="20" HorizontalAlignment="Left" Margin="486,665,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="30" Width="124"/>
+                <TextBlock Foreground="Black" FontSize="25" HorizontalAlignment="Left" Margin="77,1014,0,0" TextWrapping="Wrap" Text="Total Amount: " VerticalAlignment="Top"/>
+                <TextBlock Name="billingTotalAmount" Text="0" Foreground="Black" FontSize="25" HorizontalAlignment="Left" Margin="296,1014,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="34" Width="128" RenderTransformOrigin="0.086,0.706"/>
+                <Button Foreground="Black" Content="Change" Height="Auto" Margin="351,1094,432,50" x:Name="Confirm_Billing_Button" Click="Confirm_Billing_Click"/>
+            </Grid>
+        </ScrollViewer>
     </Grid>
-
-
-
-
-</Page>
+</UserControl>
