--- a/TMSProject/TMSProject/Classes/View/OrderDetail.xaml
+++ b/TMSProject/TMSProject/Classes/View/OrderDetail.xaml
@@ -5,77 +5,66 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TMSProject.Classes.View"
              mc:Ignorable="d"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             d:DesignHeight="540" d:DesignWidth="1050">
-    <UserControl.Resources>
-        <ControlTemplate x:Key="PlannerTemplate">
-            <TextBlock Style="{DynamicResource MaterialDesignSubtitle1TextBlock}">Regular 16sp</TextBlock>
-        </ControlTemplate>
-    </UserControl.Resources>
-    <Grid x:Name="UpdateCarrier" Background="WhiteSmoke" Margin="0,10,0,-303">
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" d:DesignWidth="1010" Height="540">
 
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="499*"/>
-            <ColumnDefinition Width="6*"/>
-        </Grid.ColumnDefinitions>
+    <Grid x:Name="GridMain" Background="White">
+        <!--
+        <ScrollViewer HorizontalAlignment="Left" Width="1010" Margin="10,10,0,82">
+        -->
+        <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" >
 
+            <Grid>
 
-        <TextBlock Text="Order Details" VerticalAlignment="Bottom" FontSize="35" FontWeight="Bold" Foreground="ForestGreen" Height="52" Margin="0,0,0,764" Grid.ColumnSpan="2"/>
-
-        <Label Content="Customer name:" Foreground="Black" FontSize="15" Margin="10,67,396.25,613"/>
-
-        <Label Content="Order ID:" Foreground="Black" FontSize="15"  Margin="10,121,440.25,559"/>
-
-        <Label Content="Order Date:" Foreground="Black" FontSize="15"  Margin="10,171,426.25,509" RenderTransformOrigin="0.506,0.344"/>
-
-
-        <Label Content="Start City:" Foreground="Black" FontSize="15"  Margin="10,229,440.25,451"/>
-
-
-        <Label Content="End City:" FontSize="15" Foreground="Black" Margin="482,220,10,460" Grid.ColumnSpan="2"/>
-
-
-        <Label Content="Contract ID" FontSize="15" Foreground="Black" Margin="506,67,462.25,613"/>
-
-        <Button Content="Load Carrier " Height="26" Margin="434,339,396.25,0"
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="291*"/>
+                    <RowDefinition Height="86*"/>
+                </Grid.RowDefinitions>
+                <TextBlock Text="Order Details" VerticalAlignment="Bottom" FontSize="35" FontWeight="Bold" Foreground="ForestGreen" Height="52" Margin="0,0,0,1078.5"/>
+                <Label Content="Customer name:" Foreground="Black" FontSize="15" Margin="10,67,396,1033.5"/>
+                <Label Content="Order ID:" Foreground="Black" FontSize="15"  Margin="10,121,440,976.5"/>
+                <Label Content="Order Date:" Foreground="Black" FontSize="15"  Margin="10,171,426,925.5" RenderTransformOrigin="0.506,0.344"/>
+                <Label Content="Start City:" Foreground="Black" FontSize="15"  Margin="10,229,440,864.5"/>
+                <Label Content="End City:" FontSize="15" Foreground="Black" Margin="371,221,545,868.5"/>
+                <Button Content="Load Carrier " Height="26" Margin="329,356,501,0"
                         x:Name="Load_Carrier_Btn" VerticalAlignment="Top" Click="Load_Carrier_Btn_Click" RenderTransformOrigin="0.325,-4.318" Background="ForestGreen"/>
 
+                <DataGrid AutoGenerateColumns="True" HorizontalAlignment="Left" Height="132" Margin="58,407,0,0" VerticalAlignment="Top" Width="785" Background="LightGreen" Name="resultDataGrid" IsReadOnly="False" >
+                    <DataGrid.RowStyle>
+                        <Style TargetType="{x:Type DataGridRow}">
+                            <EventSetter Event="MouseDoubleClick" Handler="resultDataGrid_MouseDoubleClick"/>
+                        </Style>
+                    </DataGrid.RowStyle>
+                </DataGrid>
 
-        <DataGrid AutoGenerateColumns="True" HorizontalAlignment="Left" Height="152" Margin="53,387,0,0" VerticalAlignment="Top" Width="932" Background="LightGreen" Name="resultDataGrid" IsReadOnly="False" >
-            <DataGrid.RowStyle>
-                <Style TargetType="{x:Type DataGridRow}">
-                    <EventSetter Event="MouseDoubleClick" Handler="resultDataGrid_MouseDoubleClick"/>
-                </Style>
-            </DataGrid.RowStyle>
-        </DataGrid>
+                <Button Content="Confirm Carrier" HorizontalAlignment="Left" Margin="361,739,0,0" VerticalAlignment="Top" Width="138"
+                x:Name="Confirm_Carrier_Btn" Click="Confirm_Carrier_Btn_Click" Background="ForestGreen" RenderTransformOrigin="0.05,0.496"/>
+                <TextBox Name="CustomerName" Height="32" Margin="162,62,545,0" TextWrapping="Wrap"  VerticalAlignment="Top" />
+                <TextBox Name="Order" HorizontalAlignment="Left" Height="32" Margin="162,118,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="398" />
+                <TextBox Name="OrderDate" HorizontalAlignment="Left" Height="32" Margin="162,166,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="402" />
+                <TextBox Name="StartCity" HorizontalAlignment="Left" Height="32" Margin="162,226,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="158"/>
 
-        <Button Content="Confirm Carrier" HorizontalAlignment="Left" Margin="434,768,0,0" VerticalAlignment="Top" Width="138"
-                x:Name="Confirm_Carrier_Btn" Click="Confirm_Carrier_Btn_Click" Background="ForestGreen"/>
-        <TextBox Name="CustomerName" HorizontalAlignment="Left" Height="32" Margin="162,62,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="635" />
-        <TextBox Name="Order" HorizontalAlignment="Left" Height="32" Margin="162,118,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="635" />
-        <TextBox Name="OrderDate" HorizontalAlignment="Left" Height="32" Margin="162,166,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="635" />
-        <TextBox Name="StartCity" HorizontalAlignment="Left" Height="32" Margin="162,226,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="272"/>
+                <TextBox Name="EndCity" HorizontalAlignment="Left" Height="32" Margin="455,221,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="272" />
+                <TextBlock FontSize="15" HorizontalAlignment="Left" Margin="27,298,0,0" TextWrapping="Wrap" Text="VanType:" VerticalAlignment="Top" RenderTransformOrigin="-2.98,0.906" Height="20" Width="62"/>
+                <TextBlock FontSize="15" HorizontalAlignment="Left" Margin="256,298,0,0" TextWrapping="Wrap" Text="Job Type:" VerticalAlignment="Top" Height="20" Width="64"/>
+                <TextBlock FontSize="15" HorizontalAlignment="Left" Margin="482,298,0,0" TextWrapping="Wrap" Text="Quality:" VerticalAlignment="Top" Height="20" Width="51"/>
 
-        <TextBox Name="EndCity" HorizontalAlignment="Left" Height="32" Margin="566,221,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="272" />
-        <TextBlock FontSize="15" HorizontalAlignment="Left" Margin="27,298,0,0" TextWrapping="Wrap" Text="VanType:" VerticalAlignment="Top" RenderTransformOrigin="-2.98,0.906"/>
-        <TextBlock FontSize="15" HorizontalAlignment="Left" Margin="347,298,0,0" TextWrapping="Wrap" Text="Job Type:" VerticalAlignment="Top"/>
-        <TextBlock FontSize="15" HorizontalAlignment="Left" Margin="642,298,0,0" TextWrapping="Wrap" Text="Quality:" VerticalAlignment="Top"/>
+                <TextBox Name="JobType" FontSize="15" HorizontalAlignment="Left" Height="24" Margin="329,294,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="126"/>
+                <TextBox Name="Quality"  FontSize="15" HorizontalAlignment="Left" Height="20" Margin="560,298,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="78"/>
+                <TextBox Name="VanType" FontSize="15" HorizontalAlignment="Left" Height="25" Margin="105,293,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="108"/>
 
-        <TextBox Name="JobType" FontSize="15" HorizontalAlignment="Left" Height="25" Margin="434,294,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="188"/>
-        <TextBox Name="Quality"  FontSize="15" HorizontalAlignment="Left" Height="25" Margin="732,298,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="188"/>
-        <TextBox Name="VanType" FontSize="15" HorizontalAlignment="Left" Height="25" Margin="105,293,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="188"/>
-        
-        <TextBlock Text="Carrier Infomation" VerticalAlignment="Bottom" FontSize="25" FontWeight="Bold" Foreground="ForestGreen" Height="52" Margin="10,0,-10,216" Grid.ColumnSpan="2"/>
+                <TextBlock FontSize="15" HorizontalAlignment="Left" Margin="54,568,0,0" TextWrapping="Wrap" Text="Company Name:" VerticalAlignment="Top" Height="20" Width="114"/>
+                <TextBlock FontSize="15" HorizontalAlignment="Left" Margin="460,614,0,0" TextWrapping="Wrap" Text="Avalability:" VerticalAlignment="Top" Height="20" Width="72"/>
+                <TextBlock FontSize="15" HorizontalAlignment="Left" Margin="58,614,0,0" TextWrapping="Wrap" Text="Rate:" VerticalAlignment="Top" Height="20" Width="33"/>
+                <TextBlock FontSize="15" HorizontalAlignment="Left" Margin="58,668,0,0" TextWrapping="Wrap" Text="Reefer Charger:" VerticalAlignment="Top" Height="20" Width="105"/>
+                <TextBlock FontSize="15" HorizontalAlignment="Left" Margin="461,572,0,0" TextWrapping="Wrap" Text="CarrierID:" VerticalAlignment="Top" Height="20" Width="114"/>
 
-        <TextBlock FontSize="15" HorizontalAlignment="Left" Margin="53,617,0,0" TextWrapping="Wrap" Text="Company Name:" VerticalAlignment="Top"/>
-        <TextBlock FontSize="15" HorizontalAlignment="Left" Margin="53,682,0,0" TextWrapping="Wrap" Text="Avalability:" VerticalAlignment="Top"/>
-        <TextBlock FontSize="15" HorizontalAlignment="Left" Margin="458,617,0,0" TextWrapping="Wrap" Text="Rate:" VerticalAlignment="Top"/>
-        <TextBlock FontSize="15" HorizontalAlignment="Left" Margin="458,685,0,0" TextWrapping="Wrap" Text="Reefer Charger:" VerticalAlignment="Top"/>
 
-        <TextBox Name="Rate" FontSize="15" HorizontalAlignment="Left" Height="23" Margin="622,617,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
-        <TextBox Name="CompanyName" FontSize="15" HorizontalAlignment="Left" Height="23" Margin="173,614,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
-        <TextBox Name="Availability" FontSize="15" HorizontalAlignment="Left" Height="23" Margin="173,681,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
-        <TextBox Name="RefeerChanger" FontSize="15" HorizontalAlignment="Left" Height="23" Margin="622,679,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
-
+                <TextBox Name="Rate" FontSize="15" HorizontalAlignment="Left" Height="23" Margin="222,614,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
+                <TextBox Name="CompanyName" FontSize="15" HorizontalAlignment="Left" Height="23" Margin="174,565,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
+                <TextBox Name="Availability" FontSize="15" HorizontalAlignment="Left" Height="23" Margin="580,613,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
+                <TextBox Name="RefeerChanger" FontSize="15" HorizontalAlignment="Left" Height="23" Margin="222,662,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
+                <TextBox Name="CarrierID" FontSize="15" HorizontalAlignment="Left" Height="23" Margin="580,565,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="214"/>
+            </Grid>
+        </ScrollViewer>
     </Grid>
 </UserControl>
