--- a/TMSProject/TMSProject/Classes/View/OrderSummary.xaml
+++ b/TMSProject/TMSProject/Classes/View/OrderSummary.xaml
@@ -8,25 +8,30 @@
       mc:Ignorable="d" 
       d:DesignHeight="540" d:DesignWidth="1010">
 
-    <Grid Background="White">
+    <Grid x:Name="GridMain" Background="White">
         <TextBlock HorizontalAlignment="Left" Margin="45,10,0,0" TextWrapping="Wrap" Text="Order Summary" VerticalAlignment="Top" FontSize="30" FontWeight="DemiBold" Foreground="Red"/>
         <TextBlock HorizontalAlignment="Left" Margin="45,68,0,0" TextWrapping="Wrap" Text="Order Status: " VerticalAlignment="Top" RenderTransformOrigin="0.566,1.297" Height="29" Width="121" FontSize="20" Foreground="Black"/>
 
         <!-- PROVINCE COMBO BOX-->
-        <ComboBox x:Name="All_Status" Foreground="Black" Margin="184,69,534,443" SelectedValuePath="Content">
-            <ComboBoxItem Content="All" />
-            <ComboBoxItem Content="Active" />
-            <ComboBoxItem Content="Finish" />
+        <ComboBox x:Name="All_Status" Foreground="Black" Margin="184,69,534,443" SelectedValuePath="Content"/>
 
-        </ComboBox>
+
+
         <TextBlock HorizontalAlignment="Left" Margin="45,130,0,0" TextWrapping="Wrap" Text="Start Date:" VerticalAlignment="Top" RenderTransformOrigin="0.193,0.439" FontSize="20" Foreground="Black"/>
         <TextBlock HorizontalAlignment="Left" Margin="518,135,0,0" TextWrapping="Wrap" Text="End Date:" VerticalAlignment="Top" FontSize="20" RenderTransformOrigin="0.5,-0.105" Foreground="Black"/>
-        <DatePicker Margin="155,130,665,385" Name="Start_Order_Date" ></DatePicker>
-        <DatePicker Margin="655,130,101,385" Name="End_Order_Date"></DatePicker>
+        <DatePicker Margin="155,130,665,385" Name="Start_Order_Date" Foreground="Black"></DatePicker>
+        <DatePicker Margin="655,130,101,385" Name="End_Order_Date" Foreground="Black"></DatePicker>
 
 
-        <DataGrid Margin="45,247,28,22" Name="Order_Summary" Background="LightGreen"></DataGrid>
-        <Button Content="Load Order" Name="Load_Order_Button" Click="Load_Order_Button_Click" HorizontalAlignment="Left" Margin="441,176,0,0" VerticalAlignment="Top" Width="111" RenderTransformOrigin="0.49,0.152" Height="39"/>
+        <DataGrid AutoGenerateColumns="true" HorizontalAlignment="Left" Height="248" Margin="45,246,0,0" VerticalAlignment="Top" Width="850" Background="LightGreen" Name="resultDataGrid" IsReadOnly="False" >
+            <DataGrid.RowStyle>
+                <Style TargetType="{x:Type DataGridRow}">
+                    <EventSetter Event="MouseDoubleClick" Handler="resultDataGrid_MouseDoubleClick"/>
+                </Style>
+            </DataGrid.RowStyle>
+        </DataGrid>
+
+        <Button Content="Load Order" Name="Load_Order_Button" Click="Order_Summary_Click" HorizontalAlignment="Left" Margin="441,176,0,0" VerticalAlignment="Top" Width="111" RenderTransformOrigin="0.49,0.152" Height="39"/>
 
     </Grid>
 
